Fix wrapping on subnav

--- a/share/web/static/css/nav.css
+++ b/share/web/static/css/nav.css
@@ -62,6 +62,7 @@
   display: block;
   margin: 0;
   padding: 5px;
+  white-space: normal;
 }
 
 #navigation ul.menu li ul li:hover {
